--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "node dist/server.js",
-  "dev": "nodemon src/server.ts",
-  "build": "tsc -p ."
-}
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.29",
+    "@clerk/nextjs": "^5.3.3",
+    "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
