--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true
-  }
+    "target": "ESNext",                           // Updated target to ESNext
+    "module": "CommonJS",                         // Set to CommonJS
+    "strict": true,                               // Strict mode for type-checking
+    "esModuleInterop": true,                      // Ensures compatibility with CommonJS modules
+    "skipLibCheck": true,                         // Skip type checking of declaration files
+    "forceConsistentCasingInFileNames": true,     // Ensure file names are consistently cased
+    "outDir": "./dist",                           // Output directory for compiled files
+    "rootDir": "./src"                            // Root directory of input files
+  },
+  "include": [
+    "src/**/*.ts",                                // Include all TypeScript files in src
+    "src/types.d.ts"                              // Include the custom types definition file
+  ]
 }
