--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
   "name": "rilla-voice-backend",
   "version": "1.0.0",
+  "description": "Backend for Rilla Voice, including features for managing sales transcripts and comments.",
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "mocha -r ts-node/register src/**/*.test.ts",
+    "test:jest": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.29",
     "@clerk/nextjs": "^5.3.3",
     "axios": "^1.7.5",
+    "better-sqlite3": "^11.2.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.0",
+    "@types/supertest": "^6.0.2",
+    "chai": "^5.1.1",
+    "jest": "^29.7.0",
+    "mocha": "^10.2.0",
     "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
