--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "src/**/*.ts",                                // Include all TypeScript files
     "src/**/*.test.ts",                           // Include TypeScript test files
     "src/types.d.ts"                              // Custom types definition file
-  ],
+, "src/database/uploads/local.db/init-db.ts"  ],
   "exclude": [
     "node_modules",                              // Exclude node_modules directory
     "**/*.spec.ts"                               // Exclude .spec.ts files from compilation
